--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.6
   video_player: ^2.4.10
+  google_ml_vision: ^0.0.8
 
 dev_dependencies:
   flutter_test:
